# mercari-scraper

./: .env.example  .gitignore  .npmrc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  database.py  main.py  oxlintrc.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  skills-lock.json  tsconfig.json  turbo.json  vercel.json
.agents/hooks/: post-edit.sh
.agents/skills/commit-message/: SKILL.md  strip-ai-signature.sh
.claude/: settings.json
.claude/skills/: write-changelog
.codex/: hooks.json
.gemini/: settings.json
.github/actions/: crawler.yml
.github/hooks/: hooks.json
.github/workflows/: crawler.yml  scraper.yml
apps/scraper/: .env.example  .eslintrc.js  .gitignore  .oxlintrc.json  global-setup.ts  global-teardown.ts  package.json  playwright.config.ts  sampler.mjs  tsconfig.json
apps/web/: .eslintrc.js  .oxlintrc.json  jest.config.ts  middleware.ts  next.config.js  package.json  proxy.ts  tsconfig.json  vercel.json
apps/web-nextjs/: .env.example  next.config.js  package.json  tsconfig.json  vercel.json
apps/web-tanstack/: .env.example  .eslintrc.cjs  .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  components.json  package.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
my-turborepo/: package.json  pnpm-lock.yaml
prisma/: schema.prisma
services/scraper/: package.json
services/ui/: components.json  next.config.js  package.json  tsconfig.json
tests/: crawler.spec.ts  scraper.spec.ts
utils/: mercari.ts
(+293 files in other folders)
